Update the new code